# tasty-diff

./: README.md  tasty-diff.cabal
golden/: floating-point-meta.golden  floating-point.golden
src/Test/Tasty/: Diff.hs
src/Test/Tasty/Diff/: Internal.hs  Simple.hs
src/Test/Tasty/Diff/Internal/: Diff.hs
test/: GenDiff.hs  SelfTest.hs  floating-point.hs  simple-test.hs  test-diff.hs
