name:                tasty-diff
version:             0.1.0.0
synopsis:
  Golden testing with integrated diff
-- description:
homepage:            https://github.com/Lysxia/tasty-diff#readme
license:             MIT
license-file:        LICENSE
author:              Li-yao Xia
maintainer:          lysxia@gmail.com
copyright:           2018 Li-yao Xia
category:            Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Test.Tasty.Diff
    Test.Tasty.Diff.Simple
    Test.Tasty.Diff.Internal
    Test.Tasty.Diff.Internal.Diff
  build-depends:
    ansi-terminal,
    Diff,
    tasty,
    text,
    transformers,
    base >= 4.9 && < 5
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite floating-point
  type:                 exitcode-stdio-1.0
  main-is:              floating-point.hs
  hs-source-dirs:       test
  other-modules:
    SelfTest
  build-depends:
    tasty,
    tasty-diff,
    typed-process,
    text,
    base
  ghc-options:          -Wall
  default-language:     Haskell2010

test-suite test-diff
  type:                 exitcode-stdio-1.0
  main-is:              test-diff.hs
  hs-source-dirs:       test
  other-modules:
    GenDiff
  build-depends:
    Diff,
    QuickCheck,
    tasty,
    tasty-diff,
    tasty-quickcheck,
    base
  ghc-options:          -Wall
  default-language:     Haskell2010

test-suite simple-test
  type:                 exitcode-stdio-1.0
  main-is:              simple-test.hs
  hs-source-dirs:       test
  build-depends:
    tasty,
    tasty-diff,
    base
  ghc-options:          -Wall
  default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lysxia/tasty-diff
